# pacifica_rust_sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SUMMARY.md  ci.sh  rustfmt.toml
.github/workflows/: ci.yml
api-documentation-reference/: exchangeclient.md
api-documentation-reference/common/: README.md  rest.md  signature.md  ws.md
api-documentation-reference/rate-limits/: README.md
api-documentation-reference/rest-api/: README.md
api-documentation-reference/rest-api/account/: README.md  get-account-equity-history.md  get-account-settings.md  get-positions.md  request-withdrawal.md  update-leverage.md
api-documentation-reference/rest-api/markets/: get-historical-funding.md  get-kline-candle-data.md  get-orderbook.md  get-prices.md  get-recent-trades.md
api-documentation-reference/rest-api/orders/: README.md  cancel-all-orders.md  cancel-stop-order.md  create-limit-order.md  create-market-order.md  get-order-history-by-id.md
api-documentation-reference/signing/: hardware-wallet.md  implementation.md  operation-types.md
docs/: error-codes.md  tick-and-lot-size.md
docs/common/: enum-types.md
docs/rate-limits/: api-key-rate-limiting.md
docs/rest-api/account/: get-account-info.md  (+4 more)
docs/signing/: README.md  agent-wallet.md
docs/websocket/: README.md
src/: lib.rs  logging.rs  prelude.rs
src/common/: consts.rs  errors.rs  mod.rs  signing.rs  tick_lot.rs  types.rs  utils.rs
src/exchange/: exchange_client.rs  mod.rs  operations.rs
src/info/: info_client.rs  info_endpoint.rs  mod.rs
src/rest/: rest_client.rs
src/ws/: ws_client.rs
(+54 files in other folders)
