[package]
name = "pacifica_rust_sdk"
version = "0.1.1"
edition = "2024"
authors = ["Neiroleptik"]
description = "Rust SDK for pacifica.fi exchange"
readme = "README.md"
repository = "https://github.com/Neiroleptik/pacifica_rust_sdk"
license = "MIT"
exclude = [
  ".github/*",
  ".git/*",
  ".gitignore",
  "ci.sh",
  "rustfmt.toml",
  "target/**",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14.0"
solana-sdk = "3.0.0"
bs58 = "0.5.1"
reqwest = { version = "0.12.23", features = ["json"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rust_decimal = "1.36"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.27", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.22"
thiserror = "2.0.16"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }